# dnslib3

./: .pre-commit-config.yaml  Makefile  README.md  fuzz.py  modd.conf  pyproject.toml
.github/workflows/: test.yml
dnslib/: __init__.py  bimap.py  bit.py  buffer.py  client.py  digparser.py  dns.py  fixedresolver.py  intercept.py  label.py  lex.py  proxy.py  ranges.py  server.py  shellresolver.py  test_decode.py  zoneresolver.py
tests/: test_decode.py
