[tool.poetry]
name = "dnslib3"
version = "0.10.0"
description = "Simple library to encode/decode DNS wire-format packets"
authors = ["Paul Chakravarti", "Ivan Sitkin <alvinera@yandex.ru>", "Dmitry Orlov <me@mosquito.su>"]
license = "BSD-2-Clause"
readme = "README.md"
classifiers = [
  "Topic :: Internet :: Name Service (DNS)",
  "Programming Language :: Python :: 3",
]
packages = [
  {include = "dnslib"}
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.5"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = [
  "BLE",
  "C90",
  "E",
  "F",
  "G",
  "I",
  "ICN",
  "PLE",
  "Q",
  "RUF006",
  "RUF100",
  "T10",
  "T20",
  "TID",
  "UP",
  "W",
]
ignore = [
  "E712", 
  "UP007", 
  "T201", 
  "T203", 
  "E731", 
  "E741", 
  "E743", 
  "C901", 
  "E722",
  "E501",
  "F403",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

