[tool.poetry]
name = "dnslib3"
version = "0.10.0"
description = "Simple library to encode/decode DNS wire-format packets"
authors = ["Paul Chakravarti", "Ivan Sitkin <alvinera@yandex.ru>", "Dmitry Orlov <me@mosquito.su>"]
license = "BSD-2-Clause"
readme = "README.md"
classifiers = [
  "Topic :: Internet :: Name Service (DNS)",
  "Programming Language :: Python :: 3",
]
packages = [
  {include = "dnslib"}
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
coveralls = "3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider --doctest-modules --cov=dnslib --cov-report=term-missing --color=yes"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["dnslib"]
